# flybrain

./: .gitignore  flake.nix  readme.md  sih-entrypoint.sh
docs/: claude-zero-copy-zero-serialization-dds-plan.md
nix/: fast-cdr.nix  fast-dds-2.nix  klt-feature-tracker-source.nix  micro-cdr.nix  micro-xrce-dds-agent.nix  micro-xrce-dds-client.nix  px4-docker.nix  px4-gazebo.nix  px4-msgs.nix  px4-opticalflow-source.nix  px4-source.nix  spdlog-1_9.nix
px4/px4-gazebo-plugins/: CMakeLists.txt  default.nix
px4/px4-opticalflow/: CMakeLists.txt  default.nix
px4/px4-opticalflow/cmake/: px4_opticalflowConfig.cmake.in
ros2_ws/src/imu_gnss_estimation_core/: CMakeLists.txt  package.xml
ros2_ws/src/imu_gnss_estimation_core/include/imu_gnss_estimation_core/: config.hpp  ekf.hpp  samples.hpp  state.hpp  types.hpp
ros2_ws/src/imu_gnss_estimation_core/src/: ekf.cpp
ros2_ws/src/imu_gnss_estimation_ros/: CMakeLists.txt  package.xml
ros2_ws/src/imu_gnss_estimation_ros/config/: estimator.yaml
ros2_ws/src/imu_gnss_estimation_ros/include/imu_gnss_estimation_ros/: estimator_node.hpp
ros2_ws/src/imu_gnss_estimation_ros/src/: estimator_node.cpp  main.cpp
