<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>imu_gnss_estimation_core</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="43226681+Luke-kC@users.noreply.github.com">lukec</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>eigen3_cmake_module</depend>
    <depend>Eigen3</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
